--- a/notebooks/Practica3-E.ipynb
+++ b/notebooks/Practica3-E.ipynb
@@ -26,6 +26,50 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "Anàlisi de resultats en aprenentatge computacional d'una base de dades de kaggle que conté tweets sobre Elon Musk: https://www.kaggle.com/taruntiwarihp/elon-musk-tweets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Anàlisi dels atributs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Atributs més importants i atribut a predir"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Mètode d'aprenentatge computacional aplicat,"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Resultats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -47,7 +91,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Conclusions"
+   ]
   }
  ],
  "metadata": {
